cmake_minimum_required(VERSION 3.1)

project(CPPProjects)

set(CMAKE_CXX_STANDARD 14)

# MESSAGE("<<<<<< root")
# MESSAGE(${CMAKE_SOURCE_DIR})
# MESSAGE(${CMAKE_INSTALL_PREFIX})
# MESSAGE(${PROJECT_SOURCE_DIR})
# MESSAGE(${PROJECT_BINARY_DIR})

# MESSAGE(">>>>> CPPProjects: ")
# MESSAGE("PROJECT_SOURCE_DIR:"${PROJECT_SOURCE_DIR})
# MESSAGE("PROJECT_BINARY_DIR:"${PROJECT_BINARY_DIR})
# MESSAGE("CMAKE_CURRENT_SOURCE_DIR:"${CMAKE_CURRENT_SOURCE_DIR})
# MESSAGE("CMAKE_CURRRENT_BINARY_DIR:"${CMAKE_CURRRENT_BINARY_DIR})

include_directories(common/)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)

add_subdirectory(thread_pool/)